--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -86,6 +86,6 @@
         </a>
       </div>
     </div>
-    <div id="background-bottom-image"></div>
+    <div id="background-bottom-image" class="bottom-0 start-0 end-0 position-absolute"></div>
 </div>
 {% endblock %}
