Исправлено странное расположения элементов в редакторе на мобильных устройствах

--- a/web/templates/editor.html
+++ b/web/templates/editor.html
@@ -14,7 +14,7 @@
 не перекрывался невидимыми элементами #}
 {# Только что понял, что visible/invisible переводится как
 видимо-невидимо #}
-<div class="row fixed-bottom sticky-md-top justify-content-end p-2 invisible">
+<div class="row fixed-bottom sticky-md-top justify-content-end p-2 invisible position-sticky">
     <div class="col-md-2 m-0">
         <div class="w-100 bg-dark rounded p-2 visible">
             <button {{ button_class() }} type="button" data-bs-toggle="offcanvas" data-bs-target="#nodes-offcanvas"
