Исправлено странное расположения элементов в редакторе на мобильных устройствах

--- a/web/templates/editor.html
+++ b/web/templates/editor.html
@@ -27,7 +27,7 @@
             {{ button("Генерировать", "btn-generate", onclick="generate()") }}
         </div>
 
-        <div class="w-100 bg-dark rounded p-2 mt-2 form-group" id="params-editor">
+        <div class="w-100 bg-dark rounded p-2 mt-2 form-group overflow-auto" style="max-height: 25vh;" id="params-editor">
         </div>
     </div>
 </div>
