--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -22,6 +22,6 @@
     {{ error_message(message) }}
     {% endif %}
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    <a href="/register">Ещё нету аккаунта?</a>
+    <a href="/register">Ещё нет аккаунта?</a>
 </form>
 {% endblock %}
