--- a/web/templates/obtain_token.html
+++ b/web/templates/obtain_token.html
@@ -1,31 +1,46 @@
 {% extends "auth_form_base.html" %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-<form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.expires.label }}<br>
-        {{ form.expires(class="form-control") }}<br>
-        {% for error in form.expires.errors %}
-        {{ error_message(error) }}
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(class="form-control", type="password", placeholder="Введите пароль") }}<br>
-        {% for error in form.password.errors %}
-        {{ error_message(error) }}
-        {% endfor %}
-    </p>
-    {% if message %}
-    {{ error_message(message) }}
-    {% endif %}
-    {% if token %}
-    <div class="alert alert-success" role="alert">
-        Ваш токен: {{ token }}
+<div class="background-image top-0 start-0 w-100 h-100 position-fixed"></div>
+<div class="background top-0 start-0 w-100 h-100 position-fixed"></div>
+<div class="blur top-0 start-0 w-100 h-100 position-fixed"></div>
+
+<div id="header">
+    <a href="/index">
+      <img id="logo" class="user-select-none" src="{{ static('img/logo.svg') }}" alt="logo">
+    </a>
+</div>
+
+<div class="reg-window">
+    <div class="reg-content items">
+        <h1 class="title">{{ title }}</h1>
+        <form action="" method="post" novalidate>
+            {{ form.hidden_tag() }}
+            <p>
+                {{ form.expires.label }}<br>
+                {{ form.expires(class="form-control") }}<br>
+                {% for error in form.expires.errors %}
+                {{ error_message(error) }}
+                {% endfor %}
+            </p>
+            <p>
+                {{ form.password.label }}<br>
+                {{ form.password(class="form-control", type="password", placeholder="Введите пароль") }}<br>
+                {% for error in form.password.errors %}
+                {{ error_message(error) }}
+                {% endfor %}
+            </p>
+            {% if message %}
+            {{ error_message(message) }}
+            {% endif %}
+            {% if token %}
+            <div class="alert alert-success" role="alert">
+                Ваш токен: {{ token }}
+            </div>
+            {% endif %}
+            <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+        </form>
     </div>
-    {% endif %}
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-</form>
+    <div class="reg-waves"></div>
+</div>
 {% endblock %}
