Написана пояснительная записка

--- a/web/templates/auth_form_base.html
+++ b/web/templates/auth_form_base.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 
-{% block head %}
-{# Исходный код: web/style/auth.css #}
-<link rel="stylesheet" href="{{ static('style/auth.css') }}" type="text/css">
-{% endblock %}
-
 {% macro error_message(msg) -%}
 <div class="alert alert-danger" role="alert">
     {{ msg }}
 </div>
 {%- endmacro -%}
+
+{% block content %}
+<h1>{{ title }}</h1>
+<form action="" method="post" novalidate>
+    {{ form.hidden_tag() }}
+    {% block form %}{% endblock %}
+</form>
+{% endblock %}
