--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -1,34 +1,30 @@
 {% extends "auth_form_base.html" %}
 
-{% block content %}
-<h1>{{ title }}</h1>
-<form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.login.label }}<br>
-        {{ form.login(class="form-control", placeholder="Введите логин") }}<br>
-        {% for error in form.login.errors %}
-        {{ error_message(error) }}
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(class="form-control", type="password", placeholder="Введите пароль") }}<br>
-        {% for error in form.password.errors %}
-        {{ error_message(error) }}
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password_again.label }}<br>
-        {{ form.password_again(class="form-control", type="password", placeholder="Введите пароль ещё раз") }}<br>
-        {% for error in form.password_again.errors %}
-        {{ error_message(error) }}
-        {% endfor %}
-    </p>
-    {% if message %}
-    {{ error_message(message) }}
-    {% endif %}
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    <a href="/login">Уже есть аккаунт?</a>
-</form>
+{% block form %}
+<p>
+    {{ form.login.label }}<br>
+    {{ form.login(class="form-control", placeholder="Введите логин") }}<br>
+    {% for error in form.login.errors %}
+    {{ error_message(error) }}
+    {% endfor %}
+</p>
+<p>
+    {{ form.password.label }}<br>
+    {{ form.password(class="form-control", type="password", placeholder="Введите пароль") }}<br>
+    {% for error in form.password.errors %}
+    {{ error_message(error) }}
+    {% endfor %}
+</p>
+<p>
+    {{ form.password_again.label }}<br>
+    {{ form.password_again(class="form-control", type="password", placeholder="Введите пароль ещё раз") }}<br>
+    {% for error in form.password_again.errors %}
+    {{ error_message(error) }}
+    {% endfor %}
+</p>
+{% if message %}
+{{ error_message(message) }}
+{% endif %}
+<p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+<a href="/login">Уже есть аккаунт?</a>
 {% endblock %}
