--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% macro centrized() %}
-d-flex align-items-center justify-content-center
+d-flex align-items-center justify-content-center text-center
 {%- endmacro -%}
 
 {% block content %}
