--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -38,34 +38,16 @@
         </p>
       </div>
       <div id="architecture" class="col">
-        <h1 class="title">Архитектура</h1>
-        <ol class="desc">
-          <li>
-            Всё логика сайта состоит из сервисов, работающих с помощью <a class="link" href="https://flask.palletsprojects.com/en/latest/blueprints/" target="_blank">flask.Blueprint</a>. На данный момент выделены следующие сервисы:
-            <ul>
-              <li><a class="link" href="https://github.com/zatrit/webprnd/tree/master/pages" target="_blank">pages/</a> - отвечает за страницы, разделён на несколько модулей.</li>
-              <li><a class="link" href="https://github.com/zatrit/webprnd/blob/master/api.py" target="_blank">api.py/</a> - отвечает за API. Так как API небольшое, то это всего один blueprint.</li>
-            </ul>
-          </li>
-          <li>
-            Все модели для баз данных находятся в data/.
-          </li>
-          <li>
-            <code># type: ignore</code> и прочие подобные комментарии нужны для того, чтобы у меня не ругался линтер. Благодаря ему я могу писать код без ошибок в VSCode.
-          </li>
-          <li>
-            Для запуска всех тестов используйте команду <code>py test</code> или <code>python test</code>
-          </li>
-          <li>
-            Для компиляции фронт-энда существует скрипт <a class="link" href="https://github.com/zatrit/webprnd/blob/master/api.py" target="_blank">build.py/</a>
-          </li>
-          <li>
-            Желательно использовать явную типизацию в коде на Python и TypeScript в страницах, чтобы не допускать некоторых ошибок
-          </li>
-          <li>
-            Для отрисовки редактора блочной логики используется библиотека vis.js.
-          </li>
-        </ol>
+        <h1 class="title">Описание</h1>
+        <p>
+          Генератор псевдослучайных чисел - это программное обеспечение, которое создает последовательность чисел,
+          которые кажутся случайными, но на самом деле они являются заранее определенными.<br><br> Этот генератор может быть
+          полезен во многих приложениях, например для шифрования данных или для создания игровых сценариев.<br><br> Однако,
+          важно помнить, что псевдослучайные числа могут быть предсказуемыми, если вы знаете математические алгоритмы,
+          используемые для их генерации.
+          В проекте реализовано API. Некоторые его функции требуют токена авторизации.<br><br>
+          Токен авторизации можно получить по ссылке ниже.<br><br>
+        </p>
       </div>
     </div>
     <div id="contacts" class="row h-auto d-flex flex-column flex-md-row">
